--- a/src/components/bookForm/BookForm.module.css
+++ b/src/components/bookForm/BookForm.module.css
@@ -1,6 +1,12 @@
 .bookForm {
-  min-width: 40rem;
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  margin: 1rem;
+
+  min-width: 10rem;
+  padding: 1.5rem 1rem;
 
   background-color: var(--form-black);
   border-radius: 1rem;
@@ -10,4 +16,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: .5rem;
 }
