--- a/src/components/formSelect/FormSelect.module.css
+++ b/src/components/formSelect/FormSelect.module.css
@@ -1,3 +1,9 @@
+.selectBlockContainer {
+  display: flex;
+  flex-direction: column;
+  gap: .3rem;
+}
+
 .selectContainer {
   display: flex;
   align-items: center;
@@ -25,4 +31,8 @@
 .formSelect option {
   outline: none;
   border: none;
+}
+
+.title {
+  font-size: 1.2rem;
 }
